Non-printable characters
- remove non-printable unicode characters during file import, cf. https://software.applied-geodesy.org/forum/?id=14766
- replace trim().isEmpty() by isBlank()